--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^2.25.3",
     "gatsby-cli": "^2.14.0",
     "gatsby-image": "^2.4.21",
+    "gatsby-plugin-google-tagmanager": "^2.6.0",
     "gatsby-plugin-manifest": "^2.5.2",
     "gatsby-plugin-offline": "^3.3.3",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
