--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -20,6 +20,7 @@
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-burger-menu": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-netlify-form": "^2.1.5",
