--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-styled-components": "^3.5.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.4.2",
+    "gatsby-source-sanity": "^6.0.4",
     "gatsby-transformer-sharp": "^2.5.21",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
