--- a/sanity/package.json
+++ b/sanity/package.json
@@ -23,7 +23,8 @@
     "@sanity/vision": "^2.0.9",
     "prop-types": "^15.6",
     "react": "^16.2",
-    "react-dom": "^16.2"
+    "react-dom": "^16.2",
+    "react-icons": "^4.1.0"
   },
   "devDependencies": {}
 }
