--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -5,55 +5,56 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@sanity/block-content-to-react": "^2.0.7",
-    "babel-plugin-styled-components": "^1.12.0",
-    "gatsby": "^2.25.3",
-    "gatsby-cli": "^2.14.0",
+    "@sanity/block-content-to-react": "^3.0.0",
+    "babel-plugin-styled-components": "^2.1.3",
+    "gatsby": "^5.10.0",
+    "gatsby-cli": "^5.10.0",
     "gatsby-image": "^2.4.21",
-    "gatsby-plugin-google-tagmanager": "^2.6.0",
-    "gatsby-plugin-manifest": "^2.5.2",
-    "gatsby-plugin-offline": "^3.3.3",
+    "gatsby-plugin-google-tagmanager": "^5.10.0",
+    "gatsby-plugin-image": "^3.10.0",
+    "gatsby-plugin-manifest": "^5.10.0",
+    "gatsby-plugin-offline": "^6.10.0",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
-    "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sharp": "^2.7.1",
-    "gatsby-plugin-sitemap": "^2.11.0",
-    "gatsby-plugin-styled-components": "^3.5.0",
+    "gatsby-plugin-react-helmet": "^6.10.0",
+    "gatsby-plugin-sharp": "^5.10.0",
+    "gatsby-plugin-sitemap": "^6.10.0",
+    "gatsby-plugin-styled-components": "^6.10.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-source-filesystem": "^2.4.2",
-    "gatsby-source-sanity": "^6.0.4",
-    "gatsby-transformer-sharp": "^2.5.21",
+    "gatsby-source-filesystem": "^5.10.0",
+    "gatsby-source-sanity": "^7.6.3",
+    "gatsby-transformer-sharp": "^5.10.0",
     "normalize.css": "^8.0.1",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-burger-menu": "^2.9.0",
-    "react-dom": "^16.12.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-burger-menu": "^3.0.9",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-netlify-form": "^2.1.5",
-    "react-slick": "^0.27.13",
+    "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
-    "prettier": "2.1.2"
+    "prettier": "2.8.8"
   },
   "keywords": [
     "gatsby"
   ],
   "license": "0BSD",
   "scripts": {
-    "build": "gatsby build",
+    "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/dbrogers33/ietso"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/dbrogers33/ietso/issues"
   }
 }
