--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^5.10.0",
     "gatsby-source-sanity": "^7.6.3",
+    "gatsby-starter-default": "^1.0.0",
     "gatsby-transformer-sharp": "^5.10.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
