--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -56,5 +56,10 @@
   },
   "bugs": {
     "url": "https://github.com/dbrogers33/ietso/issues"
+  },
+  "overrides": {
+    "react-server-dom-webpack@0.0.0-experimental-c8b778b7f-20220825": {
+      "react": "^18.2.0"
+    }
   }
 }
